merge, cut, and trim

--- a/_assets/includes/metatags.htm
+++ b/_assets/includes/metatags.htm
@@ -1,8 +1,6 @@
 <!-- #bbpragma doctype="html5" root_element="head" encoding="utf-8" -->
 <meta charset="utf-8">
 <!-- #bbinclude "bootstrap-css.incl" -->
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+<meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 <!-- end bbinclude -->
 <link rel="stylesheet" href="/_assets/css/hayward.css" media="screen">
